--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,18 +1,10 @@
 <h2>Reporter output</h2><table><tr><td>Connect to the datbase</td></tr>
 <tr><td>Browser open SuccessFully</td></tr>
 <tr><td>Login Successfully</td></tr>
-<tr><td>Patient Added</td></tr>
-<tr><td>Logout Successfully</td></tr>
-<tr><td>Browser Closed</td></tr>
-<tr><td>Browser open SuccessFully</td></tr>
-<tr><td>Login Successfully</td></tr>
-<tr><td>Patient Added</td></tr>
-<tr><td>Logout Successfully</td></tr>
-<tr><td>Login Successfully</td></tr>
-<tr><td>Update the Patient details</td></tr>
-<tr><td>Logout Successfully</td></tr>
-<tr><td>Login Successfully</td></tr>
-<tr><td>Medical Report is Added</td></tr>
+<tr><td>addDoctorTest Execution Started </td></tr>
+<tr><td>Doctor is added successfully</td></tr>
+<tr><td>Doctor is Added</td></tr>
+<tr><td>addDoctorTest Execution Successfull </td></tr>
 <tr><td>Logout Successfully</td></tr>
 <tr><td>Browser Closed</td></tr>
 <tr><td>Dis-Connect to the datbase</td></tr>
